--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MultiTools</title>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
 </head>
 
@@ -47,6 +47,12 @@
             </div>
         </a>
 
+        <a href="/calculator">
+            <div class="card">
+                <h2>Calculator</h2>
+                <p>A simple calculator for your calculations</p>
+            </div>
+        </a>
 
         <a href="/document">
             <div class="card">
