--- a/html/calc.html
+++ b/html/calc.html
@@ -5,14 +5,29 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="icon.png" type="image/x-icon">
   <title>Calculator</title>
   <style>
     body {
       margin: 0;
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #08aeea;
-      background-image: linear-gradient(0deg, #08aeea 0%, #2af598 100%);
+      /* background-color: #08aeea;
+      background-image: linear-gradient(0deg, #08aeea 0%, #2af598 100%); */
+      background-color: rgb(152, 190, 193);
       background-repeat: no-repeat;
+    }
+
+    #back {
+      text-decoration: none;
+      position: absolute;
+      top: 8px;
+      right: 8px;
+      background-color: rgb(239, 117, 117);
+      padding: 8px;
+      border-radius: 10px;
+      color: white;
+      font-size: 20px;
+      font-family: system-ui;
     }
 
     .container {
@@ -39,7 +54,7 @@
     @media screen and (max-width: 500px) {
       .calc {
         width: 90%;
-        margin-top: 20%;
+        margin-top: 30%;
       }
     }
 
@@ -89,7 +104,7 @@
 </head>
 
 <body>
-
+  <a href="/" id="back">Back</a>
   <div class="container">
     <div id="calc" class="calc">
       <div id="screen" class="screen" onclick="copy()"></div>
@@ -196,6 +211,15 @@
       myScreen.textContent = result
       input = result
       console.log(input)
+    }
+
+    const theme = localStorage.getItem("theme")
+
+    if (theme == "dark"){
+      document.body.style.backgroundColor = "rgb(55, 55, 55)"
+    }
+    else{
+      document.body.style.backgroundColor = "rgb(152, 190, 193)"
     }
 
   </script>
